# toad_raytracer_contest

./: .gitignore  Cargo.toml
.cargo/: config.toml
docs/: drafts.md
raytracer/: Cargo.toml
raytracer/src/: cli_api.rs  constants.rs  fps_counter.rs  main.rs  render_thread.rs  surface.rs  tracing.rs  worker_thread.rs
raytracer/src/math/: cone.rs  f32_util.rs  mat44.rs  mod.rs  quat.rs  random.rs  ray.rs  sphere.rs  vec3.rs
raytracer/src/primitives/: bounding_box.rs  bounding_sphere.rs  camera.rs  cast_result.rs  mesh.rs  mod.rs  plane.rs  quad.rs  shape.rs  skybox.rs  sphere.rs  triangle.rs  uv_set.rs
raytracer/src/render/: mod.rs  orennayar.rs
raytracer/src/scene/: acceleration_structure.rs  camera.rs  gltf_importer.rs  light.rs  material.rs  mod.rs  sampler.rs  scene.rs  scene_defaults.rs  svo.rs  texture.rs  uri.rs  workload.rs
raytracer/src/scene/acceleration_structure/: acceleration_structure.rs  flat_array.rs  mod.rs  octree.rs  svogi.rs
raytracer/src/scene/lights/: directional.rs  light.rs  mod.rs  point.rs  spot.rs
raytracer/src/scene/texture/: mod.rs  samplable.rs  sampler.rs  texture.rs  texture_transform.rs
raytracer/src/util/: fill_gradient.rs  fixed_array.rs  fresnel_constants.rs  mod.rs  prng.rs  queue.rs  unresizable_array.rs
raytracer_lib/: Cargo.toml
raytracer_lib/src/: lib.rs
res/: duck_embedded.gltf  scene2_2_embedded.glb  scene2_2_embedded.gltf  scene2_embedded.gltf
res/toad/: stage2__.glb
src/: async_util.rs  constants.rs  main.rs  render_thread.rs  surface.rs  tracing.rs  worker_thread.rs
src/math/: mod.rs
src/primitives/: camera.rs  cast_result.rs  mod.rs  shape.rs  sphere.rs
src/scene/: mod.rs  scene.rs  svo.rs
