[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer_lib = { path = "../raytracer_lib" }
anyhow = "1.0.72"
const-random = "0.1.15"
futures = "0.3.28"
rand = { version = "0.8.5", features = ["simd_support", "packed_simd"] }
softbuffer = "0.3.0"
winit = "0.28.6"
concurrent-queue = "2.2.0"
stop-thread = "0.2.0"
