[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer_lib = { path = "../raytracer_lib" }
anyhow = "1.0.72"
const-random = "0.1.15"
futures = "0.3.28"
rand = { version = "0.8.5", features = ["simd_support", "packed_simd"] }
softbuffer = "0.3.0"
winit = "0.28.6"
concurrent-queue = "2.2.0"
stop-thread = "0.2.0"
lazy_static = "1.4.0"
image = "0.24.6"
base64 = "0.21.2"
palette = "0.7.2"
gltf = { version = "1.2.0", features = ["KHR_lights_punctual", "KHR_materials_ior", "KHR_materials_transmission"] }
itertools = "0.11.0"
uriparse = "0.6.4"
clap = { version = "4.4.1", features = ["derive", "string"] }
const-str = "0.5.6"
once_cell = "1.18.0"
rand_xoshiro = "0.6.0"
const_guards = "0.1.3"
